--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
   },
   "dependencies": {
     "@photo-sphere-viewer/core": "^5.13.4",
-    "@tailwindcss/postcss": "^4.1.11",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.2",
     "idb-keyval": "^6.2.2",
     "lucide-react": "^0.525.0",
     "marzipano": "^0.10.2",
-    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
     "react-date-range": "^2.0.1",
@@ -27,18 +25,21 @@
     "react-router-dom": "^7.6.3",
     "react-tooltip": "^5.29.1",
     "swiper": "^11.2.10",
-    "tailwindcss": "^4.1.11",
     "three": "^0.179.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "vite": "^7.0.0"
   }
 }
