--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@photo-sphere-viewer/core": "^5.13.4",
+    "axios": "^1.12.2",
+    "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.2",
     "idb-keyval": "^6.2.2",
@@ -21,6 +23,7 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^19.1.0",
     "react-floating-whatsapp": "^5.0.8",
+    "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
     "react-tooltip": "^5.29.1",
