--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-floating-whatsapp": "^5.0.8",
     "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.6.3",
+    "react-select": "^5.10.2",
     "react-tooltip": "^5.29.1",
     "swiper": "^11.2.10",
     "three": "^0.179.1"
